--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="btn btn-color-2"
             onclick="window.open('https://drive.google.com/file/d/1zEftV-j2Ki2Ob1tB-Ri_XHDqqos-iA9d/view?usp=drive_link')"
           >
-            Download CV
+            Download Resume
           </button>
           <button class="btn btn-color-1" onclick="location.href='https://drive.google.com/file/d/1zEftV-j2Ki2Ob1tB-Ri_XHDqqos-iA9d/view?usp=drive_link'">
             Contact Info
